--- a/cinevelvet/src/main/resources/application.properties
+++ b/cinevelvet/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=cinevelvet
 # Puerto del servidor
 server.port=8080
 
-# Configuración de MySQL
+# Configuracion de MySQL
 spring.datasource.url=jdbc:mysql://localhost:3306/cinevelvetdb
 spring.datasource.username=root
 spring.datasource.password=23299832G
