--- a/cinevelvet/src/main/resources/application.properties
+++ b/cinevelvet/src/main/resources/application.properties
@@ -10,6 +10,6 @@ spring.datasource.password=23299832G
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
