Se añaden logs y modifica la llamada a las sesiones

--- a/cinevelvet-backend/cinevelvet/src/main/resources/application.properties
+++ b/cinevelvet-backend/cinevelvet/src/main/resources/application.properties
@@ -13,3 +13,18 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+# Nivel de logging por defecto
+logging.level.root=INFO
+
+# Nivel especifico para tus paquetes
+logging.level.com.cinevelvet=DEBUG
+
+# Ruta del archivo de log (se guardara en la raiz del proyecto)
+logging.file.name=logs/cinevelvet.log
+
+# Tamanio maximo de cada archivo de log antes de rotar
+logging.logback.rollingpolicy.max-file-size=10MB
+
+# Numero maximo de archivos de log retenidos
+logging.logback.rollingpolicy.max-history=10
