Modificaciones en el pdf

--- a/cinevelvet-backend/cinevelvet/src/main/resources/application.properties
+++ b/cinevelvet-backend/cinevelvet/src/main/resources/application.properties
@@ -21,7 +21,7 @@ logging.level.root=INFO
 logging.level.com.cinevelvet=DEBUG
 
 # Ruta del archivo de log (se guardara en la raiz del proyecto)
-logging.file.name=logs/cinevelvet.log
+logging.file.name=cinevelvet/logs/cinevelvet.log
 
 # Tamanio maximo de cada archivo de log antes de rotar
 logging.logback.rollingpolicy.max-file-size=10MB
