Se crea la parte de administracion

--- a/cinevelvet-backend/cinevelvet/src/main/resources/application.properties
+++ b/cinevelvet-backend/cinevelvet/src/main/resources/application.properties
@@ -14,6 +14,10 @@ spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
+# Acceso administrador
+admin.username=admin
+admin.password=1234
+
 # Nivel de logging por defecto
 logging.level.root=INFO
 
