Se modifica el gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,3 @@
 cinevelvet-backend/cinevelvet/logs/cinevelvet.log
+cinevelvet-backend/cinevelvet/logs/cinevelvet.log
+cinevelvet-backend/cinevelvet/logs/cinevelvet.log
