Se modifica el gitignore para ignorar el archivo de log

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 cinevelvet-backend/cinevelvet/logs/cinevelvet.log
 cinevelvet-backend/cinevelvet/logs/cinevelvet.log
 cinevelvet-backend/cinevelvet/logs/cinevelvet.log
+cinevelvet-backend/cinevelvet/logs/cinevelvet.log
