--- a/cinevelvet-backend/cinevelvet/src/main/resources/application.properties
+++ b/cinevelvet-backend/cinevelvet/src/main/resources/application.properties
@@ -14,6 +14,12 @@ spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
+# SMTP
+mail.username=cinemavelvet2025@gmail.com
+mail.password=jfjj rlnz wlpv spas
+mail.bcc=cinemavelvet2025@gmail.com
+#Password: CinemaVelvet2025_.
+
 # Acceso administrador
 admin.username=admin
 admin.password=1234
