Se permite seleccionar la portada de una pelicula

--- a/cinevelvet-backend/src/main/resources/application.properties
+++ b/cinevelvet-backend/src/main/resources/application.properties
@@ -3,6 +3,9 @@ spring.application.name=cinevelvet
 # Puerto del servidor
 server.port=8080
 
+# Ruta para las portadas
+upload.dir=uploads/portadas
+
 # Configuracion de MySQL
 # Conexion para local
 spring.datasource.url=jdbc:mysql://localhost:3306/cinevelvetdb
